[gd_scene format=3 uid="uid://di6kvwofq2sdd"]

[ext_resource type="Script" uid="uid://b5lsqkayi7fn" path="res://script/kick_attack.gd" id="1_ru6j8"]
[ext_resource type="Texture2D" uid="uid://blujkgwnksnma" path="res://image/berlusconi/Vallette-1.png" id="2_yc2il"]
[ext_resource type="Texture2D" uid="uid://cts5qchjqxj0p" path="res://image/berlusconi/Vallette-2.png" id="3_seybg"]
[ext_resource type="Texture2D" uid="uid://d2gv1njrfd8rk" path="res://image/berlusconi/Vallette-3.png" id="4_1o5qh"]
[ext_resource type="PackedScene" uid="uid://cyunra6m438v1" path="res://scene/health_component.tscn" id="5_yc2il"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wf81o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yc2il")
}, {
"duration": 1.0,
"texture": ExtResource("3_seybg")
}, {
"duration": 1.0,
"texture": ExtResource("4_1o5qh")
}],
"loop": true,
"name": &"kick_sequence",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ru6j8"]
radius = 23.111328
height = 89.19476

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yc2il"]
radius = 29.810822
height = 122.89264

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_seybg"]
radius = 31.050903
height = 282.02368

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1o5qh"]
radius = 46.52941
height = 216.22467

[sub_resource type="Animation" id="Animation_ru6j8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(133, 337)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(156.00003, 403.00003)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(169, 159.00002)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D4:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(105, 49.000004)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D4:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.7086773]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D3:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3351032]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CollisionShape2D:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.44854963]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CollisionShape2D2:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.1257373]
}

[sub_resource type="Animation" id="Animation_yc2il"]
resource_name = "kick_sequence"
length = 0.840002
loop_mode = 2
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01, 0.41, 0.81),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.43, 0.53, 0.83, 0.97),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(24, 357.33334), Vector2(193, 389), Vector2(195.00002, 393), Vector2(302, 363.00003), Vector2(302, 363.00003)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.49, 0.53, 0.83, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(25.333328, 428), Vector2(234, 456), Vector2(231.00002, 454.00003), Vector2(361, 395), Vector2(361.53848, 416.9231)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.49, 0.53, 0.83, 0.97),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(121.333336, 218.66667), Vector2(198.00002, 236.00002), Vector2(197, 235.99998), Vector2(232.99998, 233.99998), Vector2(232.99998, 233.99998)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D4:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.49, 0.53, 0.83, 0.97),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(68, 61.333332), Vector2(115.00001, 68), Vector2(115.00001, 68), Vector2(115.00001, 68), Vector2(105, 84)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D4:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.53, 0.97),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.7086773, 2.157227, 2.157227]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D3:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.53, 0.97),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.3351032, -0.0052359877, -0.4537856]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CollisionShape2D:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.53, 0.97),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.44854963, -0.44854963, -0.44854963]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CollisionShape2D2:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.53, 0.97),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.1257373, -1.1257373, -1.7767452]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_seybg"]
_data = {
&"RESET": SubResource("Animation_ru6j8"),
&"kick_sequence": SubResource("Animation_yc2il")
}

[node name="KickAttack" type="Area2D" unique_id=397549768 groups=["Kick"]]
z_index = -2
scale = Vector2(0.65, 0.65)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ru6j8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1234040464]
position = Vector2(173.99998, 224)
scale = Vector2(0.486, 0.505)
sprite_frames = SubResource("SpriteFrames_wf81o")
animation = &"kick_sequence"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." unique_id=1065936103]
position = Vector2(156.00003, 403.00003)
rotation = -1.1257373
shape = SubResource("CapsuleShape2D_ru6j8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1812328261]
position = Vector2(133, 337)
rotation = -0.44854963
shape = SubResource("CapsuleShape2D_yc2il")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="." unique_id=1402476170]
position = Vector2(169, 159.00002)
rotation = 0.3351032
shape = SubResource("CapsuleShape2D_seybg")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="." unique_id=1988104508]
position = Vector2(105, 49.000004)
rotation = 1.7086773
shape = SubResource("CapsuleShape2D_1o5qh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=95099152]
libraries/ = SubResource("AnimationLibrary_seybg")

[node name="HealthComponent" parent="." unique_id=1376038834 instance=ExtResource("5_yc2il")]
max_health = 7

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
